--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,10 +50,20 @@ body {
 
 
 .form-in {
-    width: 400px;
+    width: 470px;
     padding: 40px;
     border-radius: 30px;
     box-shadow: 0px 0px 24px rgb(0 0 0 / 25%);
     background: linear-gradient(
         127.57deg, rgba(255, 255, 255, 0.4) 5.37%, rgba(255, 255, 255, 0.1) 72.64%);
+}
+
+
+.auth-logo  {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.auth-logo img{
+    width: 80px;
 }
